# ballista-rss

./: Dockerfile  alembic.ini  docker-compose.yml  main.py  migrate.sh  pyproject.toml
src/: __main__.py  env_config.py  logging_setup.py  module.py
src/postgre/: __init__.py  engine.py  h2h_gameweek_repo.py  models.py
src/postgre/alembic/: env.py
src/postgre/repository/: __init__.py  classic_gameweek_repo.py  h2h_gameweek_repo.py  pydantic_model.py  team_repo.py
src/rabbit_pool/: __init__.py  engine.py  events.py
src/service/: __init__.py  classic_text_gen.py  exceptions.py  h2h_text_gen.py  models.py  service.py
