[project]
name = "ballista-rss"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.7",
    "asyncpg>=0.30.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "feedgen>=0.9.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "alembic>=1.16.4",
    "python-dotenv>=1.1.1",
]
